--- a/.github/workflows/test2.yaml
+++ b/.github/workflows/test2.yaml
@@ -16,8 +16,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-        with:
-          path: charts/github-actions-exporter
+#        with:
+#          path: charts/github-actions-exporter
 
       - name: Install Helm
         uses: azure/setup-helm@v1
