--- a/.github/workflows/test2.yaml
+++ b/.github/workflows/test2.yaml
@@ -56,7 +56,8 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
         with:
-          path: charts/github-actions-exporter
+          fetch-depth: 0
+#          path: charts/github-actions-exporter
 
       - name: Configure Git
         run: |
